--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
     />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180X180"
+      href="./apple-touch-icon.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
     <title>Animated ToDo</title>
   </head>
   <body>
