--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180X180"
-      href="./apple-touch-icon.png"
+      href="./public/apple-touch-icon.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
     <title>Animated ToDo</title>
