--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180X180"
-      href="./apple-touch-icon.png"
+      href="/animated-todo-app/assets/apple-touch-icon-d6dfc082.png"
     />
     <link rel="manifest" href="/animated-todo-app/site.webmanifest" />
     <title>Animated ToDo</title>
