Make the app installabale as a PWA

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link
       rel="apple-touch-icon"
-      sizes="180X180"
-      href="./public/apple-touch-icon.png"
+      href="icons/apple-touch-icon.png"
+      sizes="180x180"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="icons/mask-icon.svg" color="#FFFFFF" />
     <title>Animated ToDo</title>
   </head>
   <body>
